# hypercubing-leaderboards

./: .env.example  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  backup_db.py  backup_leaderboards_db.py  build.rs  puzzle_groups.txt  setup.md
.github/workflows/: build.yml
.sqlx/: query-0092bb18a79ffce2069dc30f7f3a51f4707a87654564a4c820b8938a627ad8ff.json  query-01e1ed5538253db738569c20a0bc246200225c8fac17ad01e54c6ce239053205.json  query-050d301b2d34f6116051d2e3156b5ce9e5ab1a034b9d28fb8cc13712da1e7133.json  query-051e1768409ab0c18fbebd20933972c100f37b0e855fd462992b6e8b1875dd69.json  query-073070259cdfc5d6d3dc42d1176b7ee01003cea22baa8f9cfc44f4d2e0be5517.json  query-07f268f303dbbc3b2bd7ee18826545f51b0c45070536cde996ae6d1e78d5b696.json  query-08146834ff83751469dab4d0ca687168f5442a0026cd0be983c2d088e3d85795.json  query-090e7e3c8f94b994b6b1f51aebb2c1e5c358eb92c3909fef9adb4d6017d929e8.json  query-0df10b8ab30b53ac6462247a91b61672abd2c7e4218c742b372976e9ac9d0bb6.json  query-0f1efd4d48f558f3aa4d235376e2949883a91c7caef387f6df97ea50c8c953f2.json  query-1376634e320662c590673772e156d815ef9e99db091208e946334f4df7785825.json  query-142db5df049eea73b768681d6a2f813c3b61edd27851d79608c45eda3607f125.json  query-158050d96afe42fe649ed0125bc1861abcea96ba4ba7d8342f6845e47b1c3a2d.json  query-16709f0a3122632b6a6bef69fa196894a2070ba22e5c9a16302bb8182ee5300e.json  query-1822266aa946fbb52d85f9ae169220205c26cf98a47a1dcca57f6b76aaa6da32.json  query-19970e279529b33693e8a0d92630e5659c69b9cf8a1357116bb8612f4e9d1be0.json  query-1ca3b1d9d076efba5f44220ff4ee51596f0a843db2e65bd48722ca8116598bd3.json  query-1d58ca706a2c51c9bac7c11a2ee51ec130020cb76b7765cf9b5e61ea6ee7d4b2.json  query-1e64860bc97427debc0532741195c17f22bc8e46ed8fddbf2bf3f42a13cbf922.json  query-2050dd6c58b87aa0b2c521089cd8cc6180efef026d60378f1aa7f75353bae137.json  query-205c378785d8543f593a18c1fea58a6c96e84ec10db17d02c51cd7ef75fd024b.json  query-215a18aa9666095beee5e3a17eea3432ef037454fbd80f85a756fb1c6150379a.json  query-22124d623768079cb877ad354793c2e0040efa8344405cb3c16cb43f0557a981.json  query-234cfa2bff902ff44e08bf33507f5f5806c9dc6aa47f2ca95c6906b10e07b4b3.json  query-269dda1d7269df7fb24cb20b50cddd5bc418f01da245998a90f8c37c78bc1688.json  query-2712cab07de4bbc269909e0186407c1185997bea1ce0043f941d9d9ecb663c49.json  query-2af0146e9f8348b763e7bf8b5c9303a66f54a260ec9aa0cdfe917fc5f2403d59.json  query-2badd385947972ebed6c615a7265a0dd596168d3a4d1fdeaaea03db99018abc9.json  query-2dc6242e9c46f8c3ef319ff6ab09456d0de069a81cecabac433bad6dbb4ea8bc.json  query-2ed0caa00860753216942ac62f4db0f03b947f4c78ef63109f959eee641e4abd.json  query-2f65b680982b61eef372060fdb7a20fb7a9ea54671742305e43772dfe8030e16.json  query-2f6e73ec8eb8d7837e53dd7d4b89fd3236e1df117717b6c8aeb1265599e761e2.json  query-31a2b24cd46de4de16bd616516051cc481cb6cdc6f541f28fb76ca7af1b4887c.json  query-328bd8a67d9c94b58537e2570970c3755c90f49421622af3744a7ab11974e192.json  query-34fe61a698cf980ac9631377aa05d6c8d145d3ce2c5e0e082305f2586afa2a20.json  query-352e94ef3b8bd46784d43ee662c2ff22c4eea3fd27b73f414270c49c6e8231c0.json  query-3656bf23b97f0ff82e2843a0f6e810d7a1f178aefd87487cb5fe33e096018d23.json  query-3a814a6a648403b41e0711afa10ab43aaf66bfa2ed1ab8a2059587f380343a11.json  query-3bc2e212c92251fcdefad76bff4e59ad59dc8f4464b29ba03211097e1e52cc90.json  query-3c342a9bb3e557ca449ee2c83427e5581260d36b1e3bfea164a8107cbe6fa4b7.json  (+133 more)
css/: edit_form.css  leaderboard-styles.css  solve_table.css
docs/: schema.md
html/: 404.html.hbs  categories.html.hbs  confirmed-pkce.html.hbs  edit-solve.html.hbs  error.html.hbs  h1-with-submit-button.html.hbs  header.html.hbs  index.hbs  index.html.hbs  layout.html.hbs  my-submissions.html.hbs  pending-submissions.html.hbs  puzzle.html  puzzle.html.hbs  settings.html.hbs  sign-in-otp.html.hbs  sign-in.html  sign-in.html.hbs  signed-out.html  solve-table-contents.html.hbs  solve-table-filters.html.hbs  solve-table.html.hbs  solve.html  solve.html.hbs  solver-submissions.html.hbs  solver.html  solver.html.hbs  submit-otp.html.hbs  submit-pkce.html.hbs  submit-solve.html.hbs  submit.html.hbs  update-profile.html  upload-external.html  upload-external.html.hbs  users.html.hbs
html/audit-log/: general.html.hbs  solve.html.hbs  user.html.hbs
html/components/: audit-log-contents.html.hbs  h1-with-submit-button.html.hbs  solve-form.html.hbs  solve-table-contents.html.hbs  solve-table.html.hbs
html/layouts/: base.html.hbs
js/: edit-categories.js  edit-users.js  form.js  redirect-here.js  sign-in-otp.js  sign-in.js  solve-table.js  solve_table.js  submit-otp.js  submit-solve.js  submit.js
messages/: check-discord-for-otp.html.hbs  check-email-for-otp.html.hbs  otp.html.hbs  otp.md.hbs  otp.txt.hbs
migrations/: 20240616232227_initial.down.sql  20240616232227_initial.up.sql  20250220024922_initial.down.sql  20250220024922_initial.up.sql  20251006021737_Add_PendingSolve.down.sql  20251006021737_Add_PendingSolve.up.sql  20251022021034_inline_log_file_name.down.sql  20251022021034_inline_log_file_name.up.sql  20251129180338_add_audit_log.down.sql  20251129180338_add_audit_log.up.sql  20251214025204_hsc_autoverify.down.sql  20251214025204_hsc_autoverify.up.sql
src/: autoverify.rs  cli.rs  cookies.rs  email.rs  env.rs  error.rs  macros.rs  main.rs  puzzle_groups.rs  routes.rs  static_files.rs  templates.rs  traits.rs  util.rs
src/api/: auth.rs  autoverify.rs  categories.rs  edit_user.rs  mod.rs  moderation.rs  pb.rs  pkce.rs  profile.rs  submit_solve.rs  upload.rs  verify_solve.rs
src/db/: audit_log.rs  audit_log_event.rs  auth.rs  category.rs  event.rs  log.rs  mod.rs  profile.rs  program.rs  puzzle.rs  score.rs  setup.rs  solve.rs  token.rs  user.rs  variant.rs
src/discord/: admin.rs  block.rs  mod.rs  notify.rs  panic.rs  profile.rs  user.rs  verify.rs
src/html/: audit_log.rs  auth.rs  auth_discord.rs  boards.rs  categories.rs  forms.rs  global_leaderboard.rs  mod.rs  my_submissions.rs  not_found.rs  otp.rs  profile.rs  solve.rs  (+10 more)
tmp-notes/: 2025-02-22_programs_and_variants.txt  advanced-filters.yaml  login-notes.txt  security-todo.txt  wip_tmp.txt
(+9 files in other folders)
