[package]
name = "hsc-leaderboard"
description = "Leaderboard for speedsolves and fewest-move solves in the Hypercubing community"
version = "0.1.0"
authors = ["Milo Jacquet", "Andrew Farkas"]
edition = "2021"
homepage = "https://lb.hypercubing.xyz/"
repository = "https://github.com/Hypercubers/hsc-leaderboard"
rust-version = "1.82.0"
keywords = ["cubing", "hypercubing", "rubik", "game", "4d"]
categories = ["games", "mathematics", "simulation"]
license = "GPL-3.0-or-later"

[dependencies]

# HTML
handlebars = { version = "6.3.2", features = ["dir_source", "rust-embed"] }
rust-embed = "8.7.2"

# Web server
axum = { version = "0.8.4", features = ["multipart", "macros"] }
axum_typed_multipart = "0.16.3"
axum-embed = "0.1.0"
axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }
tokio = { version = "1.38", features = ["full"] }
tower_governor = "0.7.0"
url = "2.5.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"

# Database
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-rustls",
    "any",
    "postgres",
    "macros",
    "chrono",
] }

# Discord
poise = "0.6.1"
serenity = "0.12"

# Logging
tracing = "0.1.40"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Other
chrono = "0.4.41"
clap = { version = "4.5.42", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["from", "into"] }
dotenvy = "0.15.7"
futures = "0.3.30"
itertools = "0.14.0"
lazy_static = "1.5.0"
parking_lot = "0.12.4"
rand = { version = "0.9.2", features = ["std_rng"] }
reqwest = "0.12.22"
eyre = "0.6.12"

[lints.rust]
# missing_docs = "warn"
rust_2018_idioms = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }

assigning_clones = "allow"
comparison_chain = "allow"
doc_markdown = "warn"
if_then_some_else_none = "warn"
manual_let_else = "warn"
match_like_matches_macro = "allow"
semicolon_if_nothing_returned = "warn"
semicolon_inside_block = "warn"
single_match = "allow"
stable_sort_primitive = "warn"
too_many_arguments = "allow"
undocumented_unsafe_blocks = "warn"
uninlined_format_args = "warn"
unwrap_used = "warn"

multiple_crate_versions = { level = "allow", priority = 1 }
