[package]
name = "hypercubing-leaderboards"
description = "Leaderboards for speedsolves and fewest-move solves in the Hypercubing community"
version = "0.1.0"
authors = ["Milo Jacquet", "Andrew Farkas"]
edition = "2024"
homepage = "https://lb.hypercubing.xyz/"
repository = "https://github.com/Hypercubers/hypercubing-leaderboards"
rust-version = "1.91.0"
keywords = ["cubing", "hypercubing", "rubik", "game", "4d"]
categories = ["games", "mathematics", "simulation"]
license = "GPL-3.0-or-later"
build = "build.rs"

[dependencies]

# HTML
handlebars = { version = "6.4.0", features = ["dir_source", "rust-embed"] }
markdown = "1.0.0"
rust-embed = "8.11.0"

# Web server
axum = { version = "0.8.8", features = ["multipart", "macros"] }
axum_typed_multipart = "=0.16.3"
axum_typed_multipart_macros = "=0.16.3"                                    # derive macro breaks on 0.16.4
axum-embeddy = "0.1.0"
axum-extra = { version = "0.12.5", features = ["typed-header", "cookie"] }
axum-helmet = "0.2.0"
rustls = { version = "0.23.36", features = ["ring"] }
tokio = { version = "1.49", features = ["full"] }
tokio-condvar = "0.3.0"
tower_governor = "0.8.0"
url = "2.5.8"

# Serialization
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"

# Database
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-rustls",
    "any",
    "postgres",
    "macros",
    "chrono",
] }

# Discord
poise = "0.6.1"
serenity = "0.12.5"

# Email
cf-turnstile = "0.2.0"

# Logging
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Other
async-process = "2.5.0"
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["from", "into"] }
dotenvy = "0.15.7"
futures = "0.3.30"
hyperspeedcube_cli_types = { git = "https://github.com/HactarCE/Hyperspeedcube.git", rev = "55a25fbfd2c3dfdaf1305566905a4b1e6a6bbfa3" }
itertools = "0.14.0"
lazy_static = "1.5.0"
rand = { version = "0.9.2", features = ["std_rng"] }
reqwest = "0.13.1"
eyre = "0.6.12"
mail-send = "0.5.2"
sha2 = "0.10.9"
tempfile = "3.24.0"

[build-dependencies]
vergen-git2 = { version = "1.0.7", features = ["build"] }

[lints.rust]
# missing_docs = "warn"
rust_2018_idioms = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }

assigning_clones = "allow"
comparison_chain = "allow"
doc_markdown = "warn"
if_then_some_else_none = "warn"
manual_let_else = "warn"
match_like_matches_macro = "allow"
semicolon_if_nothing_returned = "warn"
semicolon_inside_block = "warn"
single_match = "allow"
stable_sort_primitive = "warn"
too_many_arguments = "allow"
undocumented_unsafe_blocks = "warn"
uninlined_format_args = "warn"
unwrap_used = "warn"

multiple_crate_versions = { level = "allow", priority = 1 }

[patch.crates-io]
poise = { git = 'https://github.com/HactarCE/poise.git', rev = "d79f226620b88f0dfb2bda75ac4d5c378923efd8" }
